# vermin

./: .bandit-requirements.txt  .coverage-requirements.txt  .editorconfig  .gitignore  .misc-requirements.txt  .pre-commit-hooks.yaml  .semgrepignore  .travis.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.rst  SECURITY.md  class_tests.py  constants_tests.py  count.py  function_tests.py  general_tests.py  kwargs_tests.py  lang_tests.py  minpy.py  module_tests.py  profile.sh  pyproject.toml  runtests.py  sample.vermin.ini  setup.cfg  setup.py  strftime_directive_tests.py  tests.py  testutils.py  vermin.py
.github/: CODEOWNERS  dependabot.yml
docker/: Dockerfile  build.sh  run.sh
minpy/: __init__.py  config.py  main.py  multidict.py  rules.py
misc/: .analysis-requirements.txt  .bandit-requirements.3_5.txt  .bandit-requirements.txt  .coverage-requirements.txt  .misc-requirements.3_5.txt  .misc-requirements.txt  travis.sh
tests/: annotation.py  arguments.py  array_typecodes.py  backports.py  builtin_classes.py  builtin_constants.py  builtin_exceptions.py  builtin_functions.py  bytes_directive.py  class.py  codecs_encodings.py  codecs_error_handlers.py  comment_exclusions.py  config.py  constants.py  decorators.py  exception.py  exclusions.py  function.py  general.py  kwargs.py  lang.py  lax_mode.py  maybe_annotations.py  module.py  strftime_directive.py  testutils.py  utility.py  violations.py
vermin/: __init__.py  arguments.py  backports.py  config.py  constants.py  detection.py  features.py  frequencies.py  main.py  parser.py  parsing.py  printing.py  (+6 more)
(+24 files in other folders)
